--- a/contests/.vscode/settings.json
+++ b/contests/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "chrono": "cpp",
         "limits": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__split_buffer": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
